# oci-auth-tauri

./: ARCHITECTURE.md  README.md  launch.sh  next.config.js  package-lock.json  package.json  tailwind.config.js
app/: globals.css  icons.tsx  layout.tsx  page.tsx  providers.tsx
app/lib/: plugins.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  config.rs  lib.rs  main.rs
