[package]
name = "oci-auth-tauri"
version = "0.1.0"
description = "OCI Auth Tauri Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "oci-auth-tauri"

[[bin]]
name = "oci-auth-tauri"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri and plugins
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = { version = "2.0.0", features = ["colored"] }
tauri-plugin-cli = "2.0.0"
tauri-plugin-store = "2.0.0"

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Base64 encoding
base64 = "0.21"

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
log = { version = "0.4", features = ["std"] }

# Date/Time
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
